--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -1,17 +1,28 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
-    <title>{{ 'Margo'|trans }}</title>
+    <title>{{ 'Margo' }}</title>
+    <link href="{{ app.request.basepath }}/css/normalize.css" rel="stylesheet" type='text/css'>
     <link href="{{ app.request.basepath }}/css/style.css" rel="stylesheet" type='text/css'>
 </head>
 <body>
 
-<div id="front_header">{{ 'Margo'|trans }}</div>
+<header>dfsdf
 
-{% block secondaryNavigation %}
-{% endblock %}
-{% block content %}
-{% endblock %}
+</header>
+
+<nav>
+sqdqsd
+</nav>
+
+<section>
+    {% block content %}
+    {% endblock %}
+</section>
+
+<footer>
+
+</footer>
 
 </body>
 </html>
