--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -2,17 +2,49 @@
 <head>
     <meta charset="utf-8">
     <title>{{ 'Margo' }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="{{ app.request.basepath }}/css/normalize.css" rel="stylesheet" type='text/css'>
     <link href="{{ app.request.basepath }}/css/style.css" rel="stylesheet" type='text/css'>
 </head>
 <body>
 
-<header>dfsdf
-
+<header>
+    <div class="logo">
+        <img src="{{ app.request.basepath }}/img/logo-red.png">
+    </div>
+    <div class="title">
+        Accueil
+    </div>
 </header>
 
 <nav>
-sqdqsd
+    <div class="title">
+        MENU
+    </div>
+
+    <div class="menu">
+
+        <hr>
+
+        <div class="etu">
+            <a href="">
+                <i class="fa fa-child fa-3x"></i><br>
+                Etudiant
+            </a>
+        </div>
+
+        <hr>
+
+        <div class="prof">
+            <a href="">
+                <i class="fa fa-male fa-3x"></i><br>
+                Profs
+            </a>
+        </div>
+
+        <hr>
+
+    </div>
 </nav>
 
 <section>
