--- a/web/css/style.css
+++ b/web/css/style.css
@@ -49,8 +49,6 @@ nav {
     nav .title {
         font-size: 25px;
         color: rgba(0, 0, 0, 0.5);
-        border-top: 1px solid rgba(0, 0, 0, 0.5);
-        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
         padding: 10px 0;
     }
 
@@ -70,3 +68,11 @@ nav {
     nav .prof {
         padding: 30px 0;
     }
+
+/**
+* section
+*/
+section {
+    padding-top: 100px;
+    padding-left: 25%;
+}
