--- a/app/views/student.html.twig
+++ b/app/views/student.html.twig
@@ -15,7 +15,7 @@
          <tr>
             <td> {{ etudiant.name }} </td>
             <td> {{ etudiant.firstName }} </td>
-            <td> {{ etudiant.category.name }} </td>
+            <td> {{ etudiant.category.categName }} </td>
          </tr>
       {% else %}
          <tr>
