--- a/app/views/category.html.twig
+++ b/app/views/category.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td> {{ classe.categName }} </td>
                 <td>
-                    <a href="{{ path('admin_classe_delete', {'classe': classe.categId}) }}" class="btn btn-table btn-del">Supprimer</a>
+                    <a href="{{ path('admin_category_delete', {'classe': classe.categId}) }}" class="btn btn-table btn-del">Supprimer</a>
                 </td>
             </tr>
         {% else %}
