--- a/app/views/category.html.twig
+++ b/app/views/category.html.twig
@@ -2,11 +2,11 @@
 {% set active = 'account' %}
 
 {% block title %}
-    Administration - Etudiants
+    Administration - Classe
 {% endblock %}
 
 {% block content %}
-    <a href="{{ path('admin_etudiant_add') }}" class="btn btn-add">{{ 'Ajouter un étudiant' }}</a>
+    <a href="{{ path('admin_category_add') }}" class="btn btn-add">{{ 'Ajouter une classe' }}</a>
     <table class="table table-hover">
         <thead>
         <tr>
@@ -20,6 +20,7 @@
                 <td> {{ classe.categName }} </td>
                 <td>
                     <a href="{{ path('admin_category_delete', {'classe': classe.categId}) }}" class="btn btn-table btn-del">Supprimer</a>
+                    <a href="{{ path('admin_category_edit', {'classe': classe.categId}) }}" class="btn btn-table btn-edit">Editer</a>
                 </td>
             </tr>
         {% else %}
