New routes and link

--- a/app/views/adminCategory.html.twig
+++ b/app/views/adminCategory.html.twig
@@ -2,20 +2,26 @@
 {% set active = 'account' %}
 
 {% block title %}
-    Classe
+    Administration - Classe
 {% endblock %}
 
 {% block content %}
+    <a href="{{ path('admin_category_add') }}" class="btn btn-add">{{ 'Ajouter une classe' }}</a>
     <table class="table table-hover">
         <thead>
         <tr>
             <th> {{ 'Classe' }} </th>
+            <th> {{ 'Action' }}</th>
         </tr>
         </thead>
         <tbody>
         {% for classe in classes %}
             <tr>
                 <td> {{ classe.categName }} </td>
+                <td>
+                    <a href="{{ path('admin_category_delete', {'classe': classe.categId}) }}" class="btn btn-table btn-del">Supprimer</a>
+                    <a href="{{ path('admin_category_edit', {'classe': classe.categId}) }}" class="btn btn-table btn-edit">Editer</a>
+                </td>
             </tr>
         {% else %}
             <tr>
