--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -31,7 +31,7 @@
         <hr>
 
         <div class="etu">
-            <a href="">
+            <a href="{{ path('etudiants') }}">
                 <i class="fa fa-child fa-3x"></i><br>
                 Etudiant
             </a>
@@ -40,9 +40,18 @@
         <hr>
 
         <div class="prof">
-            <a href="">
+            <a href="{{ path('teachers') }}">
                 <i class="fa fa-male fa-3x"></i><br>
                 Profs
+            </a>
+        </div>
+
+        <hr>
+
+        <div class="prof">
+            <a href="{{ path('categories') }}">
+                <i class="fa fa-male fa-3x"></i><br>
+                Classes
             </a>
         </div>
 
