--- a/app/views/adminSubject.html.twig
+++ b/app/views/adminSubject.html.twig
@@ -2,7 +2,7 @@
 {% set active = 'account' %}
 
 {% block title %}
-    Administration - Etudiants
+    Administration - Cours
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,6 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th> {{ 'Id' }} </th>
             <th> {{ 'Matière' }} </th>
             <th> {{ 'Actions' }}</th>
         </tr>
@@ -18,7 +17,6 @@
         <tbody>
         {% for subject in subjects %}
             <tr>
-                <td> {{ subject.idSubject }} </td>
                 <td> {{ subject.nameSubject }} </td>
                 <td>
                     <a href="{{ path('admin_subject_delete', {'matiere': subject.idSubject}) }}" class="btn btn-table btn-del">Supprimer</a>
