Update add user Update style.css

--- a/app/views/admin.html.twig
+++ b/app/views/admin.html.twig
@@ -9,4 +9,5 @@
     <a href="{{ path('admin_etudiants') }}">Etudiant</a>
     <a href="{{ path('admin_teachers') }}">Professeur</a>
     <a href="{{ path('admin_categories') }}">Classe</a>
+    <a href="{{ path('admin_subjects') }}">Cours</a>
 {% endblock %}
