--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -57,6 +57,14 @@
 
         <hr>
 
+        <div class="prof">
+            <a href="{{ path('subject') }}">
+                <i class="fa fa-book fa-3x" aria-hidden="true"></i><br>
+                Cours
+            </a>
+        </div>
+
+        <hr>
     </div>
 </nav>
 
