--- a/web/css/style.css
+++ b/web/css/style.css
@@ -57,6 +57,10 @@ nav {
         overflow: scroll;
     }
 
+    nav .menu:nth-child(2){
+        height: 70%;
+    }
+
     nav a {
         color: rgba(0, 0, 0, 0.5);
         text-decoration: none;
