--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -12,6 +12,8 @@
 <body>
 
 <header>
+    {% set active = active|default(null) %}
+
     <div class="logo">
         <img src="{{ app.request.basepath }}/img/logo-red.png">
     </div>
@@ -19,6 +21,15 @@
         {% block title %}
         {% endblock %}
     </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <li {% if 'admin' == active %}class="active"{% endif %}><a href="{{ path('admin') }}"><i class="icon-dashboard"></i>  {{ 'Administration' }}</a></li>
+    {% endif %}
+    {% if is_granted('ROLE_USER') %}
+    <li><a href="{{ path('logout') }}">{{ 'Logout'|trans }}</a></li>
+    {% else %}
+    <li {% if 'login' == active %}class="active"{% endif %}><a href="{{ path('login') }}"><i class="icon-user"></i> {{ 'Login'|trans }}</a></li>
+    {% endif %}
+
 </header>
 
 <nav>
