Update ProfRepository, AdminSubjectController

--- a/app/views/admin.html.twig
+++ b/app/views/admin.html.twig
@@ -10,4 +10,5 @@
     <a href="{{ path('admin_teachers') }}">Professeur</a>
     <a href="{{ path('admin_categories') }}">Classe</a>
     <a href="{{ path('admin_subjects') }}">Cours</a>
+    <a href="{{ path('admin_users') }}">Utilisateurs</a>
 {% endblock %}
