--- a/app/views/adminCategory.html.twig
+++ b/app/views/adminCategory.html.twig
@@ -6,6 +6,14 @@
 {% endblock %}
 
 {% block content %}
+    {% set alertTypeAvaillable = [ 'info', 'success', 'warning', 'error'] %}
+    {% for alert in alertTypeAvaillable %}
+        {% for message in app.session.getFlashBag.get(alert) %}
+            <div class="alert alert-{{ alert }}" >
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     <a href="{{ path('admin_category_add') }}" class="btn btn-add">{{ 'Ajouter une classe' }}</a>
     <table class="table table-hover">
         <thead>
