--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -43,8 +43,8 @@
 
         <div class="etu">
             <a href="{{ path('etudiants') }}">
-                <i class="fa fa-child fa-3x"></i><br>
-                Etudiant
+                <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i><br>
+                Etudiants
             </a>
         </div>
 
@@ -52,7 +52,7 @@
 
         <div class="prof">
             <a href="{{ path('teachers') }}">
-                <i class="fa fa-male fa-3x"></i><br>
+                <i class="fa fa-users fa-3x" aria-hidden="true"></i><br>
                 Profs
             </a>
         </div>
@@ -61,7 +61,7 @@
 
         <div class="prof">
             <a href="{{ path('categories') }}">
-                <i class="fa fa-male fa-3x"></i><br>
+                <i class="fa fa-university fa-3x" aria-hidden="true"></i><br>
                 Classes
             </a>
         </div>
