--- a/app/views/form.html.twig
+++ b/app/views/form.html.twig
@@ -2,7 +2,7 @@
 {% set active = 'form' %}
 
 {% block title %}
-    Administration - Etudiants
+    Administration
 {% endblock %}
 
 {% block content %}
