--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -21,14 +21,17 @@
         {% block title %}
         {% endblock %}
     </div>
-    {% if is_granted('ROLE_ADMIN') %}
-        <li {% if 'admin' == active %}class="active"{% endif %}><a href="{{ path('admin') }}"><i class="icon-dashboard"></i>  {{ 'Administration' }}</a></li>
-    {% endif %}
-    {% if is_granted('ROLE_USER') %}
-    <li><a href="{{ path('logout') }}">{{ 'Logout'|trans }}</a></li>
-    {% else %}
-    <li {% if 'login' == active %}class="active"{% endif %}><a href="{{ path('login') }}"><i class="icon-user"></i> {{ 'Login'|trans }}</a></li>
-    {% endif %}
+    <div class="menu">
+        {% if is_granted('ROLE_ADMIN') %}
+            <li {% if 'admin' == active %}class="active"{% endif %}><a href="{{ path('admin') }}"><i class="icon-dashboard"></i>  {{ 'Administration' }}</a></li>
+        {% endif %}
+        {% if is_granted('ROLE_USER') %}
+            <li><a href="{{ path('logout') }}">{{ 'Déconnexion' }}</a></li>
+        {% else %}
+            <li {% if 'login' == active %}class="active"{% endif %}><a href="{{ path('login') }}"><i class="icon-user"></i> {{ 'Connexion' }}</a></li>
+        {% endif %}
+    </div>
+
 
 </header>
 
