--- a/web/css/style.css
+++ b/web/css/style.css
@@ -30,6 +30,20 @@ header {
         margin-left: 5%;
         font-size: 20px
     }
+    header .menu {
+        float: right;
+        line-height: 80px;
+        width: 30%;
+    }
+    header .menu li {
+        list-style-type: none;
+        float: left;
+        padding: 0 5%;
+    }
+    header .menu a {
+        color: #e1e1e1;
+        text-decoration: none;
+    }
 
 /**
 * NAVIGATION
@@ -108,6 +122,36 @@ th {
 }
 
 /**
+* Metro
+*/
+.metro {
+    margin-top: 25%;
+    text-align: center;
+    margin-left: -5%;
+}
+.metro a{
+    padding: 50px 50px;
+    color: #e1e1e1;
+    text-decoration: none;
+}
+
+.metro-wisteria {
+    background-color: #8e44ad;
+}
+.metro-pomegranate{
+    background-color: #c0392b;
+}
+.metro-pumkin {
+    background-color: #d35400;
+}
+.metro-nephritis {
+    background-color: #28b463;
+}
+.metro-blue {
+    background-color: #2c3e50;
+}
+
+/**
 * Forms
 */
 form {
@@ -138,4 +182,21 @@ button {
     color: #f1f1f1;
     width: 80%;
     margin-top: 2%;
+}
+
+/*
+* Scrollbar
+*/
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background-color: #eaeaea;
+    border-left: 1px solid #ccc;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #aaa;
 }
