--- a/app/views/teacher.html.twig
+++ b/app/views/teacher.html.twig
@@ -15,7 +15,7 @@
             <tr>
                 <td> {{ prof.name }} </td>
                 <td> {{ prof.firstName }} </td>
-                <td> {{ prof.idSubject }} </td>
+                <td> {{ prof.subject.nameSubject }} </td>
             </tr>
         {% else %}
             <tr>
