Refactoring bdd + repository

--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -61,7 +61,13 @@
         </div>
 
         <hr>
-
+        <div class="prof">
+            <a href="{{ path('formations') }}">
+                <i class="fa fa-university fa-3x" aria-hidden="true"></i><br>
+                Formations
+            </a>
+        </div>
+        <hr>
         <div class="prof">
             <a href="{{ path('categories') }}">
                 <i class="fa fa-university fa-3x" aria-hidden="true"></i><br>
@@ -77,6 +83,8 @@
                 Cours
             </a>
         </div>
+
+
 
         <hr>
     </div>
