--- a/app/views/admin.html.twig
+++ b/app/views/admin.html.twig
@@ -11,6 +11,7 @@
         <a class="metro-wisteria" href="{{ path('admin_teachers') }}">Professeur</a>
         <a class="metro-pumkin" href="{{ path('admin_categories') }}">Classe</a>
         <a class="metro-nephritis" href="{{ path('admin_subjects') }}">Cours</a>
+        <a class="metro-greensee" href="{{ path('admin_formations') }}">Formations</a>
         <a class="metro-blue" href="{{ path('admin_users') }}">Utilisateurs</a>
     </div>
 {% endblock %}
