--- a/app/views/Exception/error404.html.twig
+++ b/app/views/Exception/error404.html.twig
@@ -1,16 +1,17 @@
 {# app/Resources/TwigBundle/views/Exception/error404.html.twig #}
 {% extends 'layout.html.twig' %}
 
-{% block body %}
-    <h1>Page not found</h1>
+{% block content %}
+    <h1>Erreur 404</h1>
 
     {# example security usage, see below #}
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         {# ... #}
     {% endif %}
 
+    <h1>Franchement, déchirer une page web, vous trouvez ça drôle ?</h1>
+    <img src="{{ app.request.basepath }}/img/page404.png">
     <p>
-        The requested page couldn't be located. Checkout for any URL
-        misspelling or <a href="{{ path('homepage') }}">return to the homepage</a>.
+        <a href="{{ path('homepage') }}">Retournez à la page d'accueil</a>.
     </p>
 {% endblock %}
