--- a/app/views/index.html.twig
+++ b/app/views/index.html.twig
@@ -6,6 +6,18 @@
 
 {% block content %}
 
-    <h1>Bienvenue sur Margo</h1>
+    <h1 class ="bvn animated bounceInDown">Bienvenue sur Margo</h1>
+
+
+
+
+    <p class="desc animated fadeInDown">Le centre de formation professionnelle des adultes (MARGO) est un organisme français de formation professionnelle.
+        Les formations proposées sont sanctionnées par un Titre Professionnel, délivré par le ministère de l'Emploi,
+        et qui est reconnu par les employeurs. Ces titres professionnels sont également accessibles par la validation des acquis de l'expérience (VAE).
+    </p>
+    <p class="desc animated fadeInDown">Les formations de MARGO sont ouvertes aux demandeurs d'emploi et aux salariés en
+        partenariat avec les organismes publics, les collectivités territoriales,
+        les entreprises (grandes, PME-PMI ou artisans).
+        Les contrats de professionnalisation font aussi partie du dispositif.</p>
 
 {% endblock %}
