--- a/app/views/teacher.html.twig
+++ b/app/views/teacher.html.twig
@@ -1,6 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% set active = 'account' %}
-
+{% block title %}
+    Professeur
+{% endblock %}
 {% block content %}
     <table class="table table-hover">
         <thead>
