--- a/app/views/layout.html.twig
+++ b/app/views/layout.html.twig
@@ -97,7 +97,7 @@
 </section>
 
 <footer>
-    Made with <i class="fa fa-heart heart"></i> by DERAME Maxime - 2016, Margo
+    Made with <i class="fa fa-heart heart"></i> by DINAM Noel - 2016, Margo
 </footer>
 
 </body>
